--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk</artifactId>
+            <version>1.11.74</version>
+        </dependency>
 
         <dependency>
             <groupId>commons-lang</groupId>
